# moveit_ws

src/robot_arm_urdf/: CMakeLists.txt  package.xml
src/robot_arm_urdf/config/: joint_trajectory_controller.yaml
src/robot_arm_urdf/launch/: arm_urdf.launch  display.launch  gazebo.launch
src/robot_arm_urdf/urdf/: robot_arm_urdf.urdf  robot_arm_urdf.urdf.bak  robot_arm_urdf_full.urdf
